add find package installed on OS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,22 @@
 #include(FetchContent)
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.21.3)
 
-project(learning VERSION 0.1.0)
+project(myProgram VERSION 0.1.0)
 
-
-add_executable(learning 
+add_executable(myProgram 
 main.cpp
 )
+
+# FIND PACKAGE INSTALLED ON OS
+find_package(PkgConfig)
+if (PKG_CONFIG_FOUND)
+  pkg_check_modules(GIOMM "giomm-2.4")
+  if (GIOMM_FOUND)    
+    target_link_libraries(myProgram ${GIOMM_LIBRARIES})
+    add_definitions(${GIOMM_CFLAGS} ${GIOMM_CFLAGS_OTHER})
+  endif()
+endif()
+
 
 #FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/whoshuu/cpr.git GIT_TAG c8d33915dbd88ad6c92b258869b03aba06587ff9) # the commit hash for 1.5.0
 #FetchContent_MakeAvailable(cpr)
@@ -17,6 +27,3 @@ main.cpp
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
-
-#target_link_libraries(learning PRIVATE cpr::cpr)
-#target_compile_options(learning PRIVATE -DCPR_BUILD_TESTS=OFF)
